@@ -1,0 +1,6 @@
+trait <%= classify(language) %> { this: Dsl =>
+<% language.gwt_keywords.reject{|kw| kw =~ /\*/ }.each do |kw| -%>
+  val <%= kw.strip.gsub(/[\s']/, "") %> = new Step("<%= kw.strip.gsub(/[\s']/, "") %>")
+<% end -%>
+}
+
